Fix name overflow
The name of the album title were overflowing and pushing the price out
of it's element.

--- a/src/components/AlbumCard/AlbumCard.module.css
+++ b/src/components/AlbumCard/AlbumCard.module.css
@@ -10,6 +10,12 @@
   font-size: 1.6rem;
 }
 
+.ablumName {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 240px;
+}
 .ablumName:hover {
   cursor: pointer;
   color: #fee440;
